# easyofd

./: pyproject.toml
easyofd/: ofd.py
easyofd/draw/: draw_pdf.py  font_tools.py  pdf_parse.py
easyofd/parser_ofd/: __init__.py
